// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProgressBar component > matches snapshot for 0% undefined 1`] = `
<DocumentFragment>
  <div>
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="0"
      class="progress-bar progress-bar-striped bg-info progress-bar-animated"
      role="progressbar"
      style="width: 0%;"
    >
      0%
    </div>
    <div
      class="progress-text"
    />
  </div>
</DocumentFragment>
`;

exports[`ProgressBar component > matches snapshot for 10% started 1`] = `
<DocumentFragment>
  <div>
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="10"
      class="progress-bar progress-bar-striped bg-info progress-bar-animated"
      role="progressbar"
      style="width: 10%;"
    >
      10%
    </div>
    <div
      class="progress-text"
    >
      started
    </div>
  </div>
</DocumentFragment>
`;

exports[`ProgressBar component > matches snapshot for 25% getting busy 1`] = `
<DocumentFragment>
  <div>
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="25"
      class="progress-bar progress-bar-striped bg-info progress-bar-animated"
      role="progressbar"
      style="width: 25%;"
    >
      25%
    </div>
    <div
      class="progress-text"
    >
      getting busy
    </div>
  </div>
</DocumentFragment>
`;

exports[`ProgressBar component > matches snapshot for 50% half way there 1`] = `
<DocumentFragment>
  <div>
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="50"
      class="progress-bar progress-bar-striped bg-info progress-bar-animated"
      role="progressbar"
      style="width: 50%;"
    >
      50%
    </div>
    <div
      class="progress-text"
    >
      half way there
    </div>
  </div>
</DocumentFragment>
`;

exports[`ProgressBar component > matches snapshot for 75% not long now 1`] = `
<DocumentFragment>
  <div>
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="75"
      class="progress-bar progress-bar-striped bg-info progress-bar-animated"
      role="progressbar"
      style="width: 75%;"
    >
      75%
    </div>
    <div
      class="progress-text"
    >
      not long now
    </div>
  </div>
</DocumentFragment>
`;

exports[`ProgressBar component > matches snapshot for 100% all done 1`] = `
<DocumentFragment>
  <div>
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="100"
      class="progress-bar progress-bar-striped bg-success"
      role="progressbar"
      style="width: 100%;"
    >
      100%
    </div>
    <div
      class="progress-text"
    >
      all done
    </div>
  </div>
</DocumentFragment>
`;

exports[`ProgressBar component > matches snapshot for undefined% undefined 1`] = `
<DocumentFragment>
  <div>
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      class="progress-bar progress-bar-striped visually-hidden"
      role="progressbar"
    >
      NaN%
    </div>
    <div
      class="progress-text"
    />
  </div>
</DocumentFragment>
`;
